tests/substructural/check/hll_drop_elab_gaps.err.expected
error: at 32:1: [SUB-ReturnValueLeak] In function 'chained_matches_leak': value 'a' of type i64 is not consumed at return
    |
 32 | fn chained_matches_leak(s: State) -> i64 {
    | ^
  hint: linear values must be consumed or returned before function exit. Try moving or dropping it.
error: at 32:1: [SUB-ReturnValueLeak] In function 'chained_matches_leak': value 'b' of type i64 is not consumed at return
    |
 32 | fn chained_matches_leak(s: State) -> i64 {
    | ^
  hint: linear values must be consumed or returned before function exit. Try moving or dropping it.
error: at 50:1: [SUB-ReturnValueLeak] In function 'loop_if_break_leak': value '_temp_2' of type unit is not consumed at return
    |
 50 | fn loop_if_break_leak() {
    | ^
  hint: linear values must be consumed or returned before function exit. Try moving or dropping it.
error: at 50:1: [SUB-ReturnValueLeak] In function 'loop_if_break_leak': value '_temp_3' of type unit is not consumed at return
    |
 50 | fn loop_if_break_leak() {
    | ^
  hint: linear values must be consumed or returned before function exit. Try moving or dropping it.
